--- a/src/layouts/Container/Container.css
+++ b/src/layouts/Container/Container.css
@@ -1,4 +1,5 @@
 .container {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 7fr 2fr;
+    text-align: center;
 }
