--- a/src/layouts/Header/Header.css
+++ b/src/layouts/Header/Header.css
@@ -1,7 +1,7 @@
 .header {
     display: flex;
     justify-content: space-between;
-    background-color: chartreuse;
+    background-color: rgb(21, 250, 17);
     align-items: center;
     font-weight: bold;
     padding: 0;
