--- a/src/components/NavItems/NavItems.css
+++ b/src/components/NavItems/NavItems.css
@@ -2,8 +2,7 @@
     margin-right: 20px;
 }
 .navitems a:hover {
-  color: red;
-  background-color: white;
+  color: rgb(6, 252, 6);
   text-align: center;
   padding: 10px;
 }
