--- a/src/components/QuizeCard/QuizeCard.css
+++ b/src/components/QuizeCard/QuizeCard.css
@@ -1,18 +1,44 @@
+/* Styling quiz-card */
 .quize-card {
-    background-color: rgba(126, 187, 239, 0.521);
-    width: 600px;
-    height: 300px;
+    background-color: rgba(126, 186, 239, 0.275);
+    width: 700px;
+    height: 270px;
     border: 1px solid black;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     text-align: center;
     border-radius: 10px;
     box-shadow: 1px 1px 5px 1px black;
+    padding: 25px;
+    position: relative;
+}
+.quize-card h3 {
+    text-align: left;
 }
 
+/* Managing quize's option's container */
 .options-container {
     display: grid;
     grid-template-columns: auto auto;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    gap: 20px;
+   
+}
+
+/* styling Ans icon */
+.quize-card a {
+    text-decoration: none;
+    font-weight: bold;
+    position: absolute;
+    right: 10px;
+    top: 5px;
+    padding: 10px;
+    border-radius: 10px;
+    color: green;
+}
+
+.quize-card a:hover {
+    background-color: rgb(0, 255, 30);
+    color: black;
 }
