--- a/src/layouts/Header/Header.css
+++ b/src/layouts/Header/Header.css
@@ -1,10 +1,11 @@
 .header {
     display: flex;
     justify-content: space-between;
-    background-color: rgb(21, 250, 17);
+    background-color: rgba(2, 136, 253, 0.744);
     align-items: center;
     font-weight: bold;
     padding: 0;
+    box-shadow: 0px 10px 50px 20px  rgba(126, 186, 239, 0.514);
 }
 
 .header a {
