--- a/src/components/QuizeCard/QuizeCard.css
+++ b/src/components/QuizeCard/QuizeCard.css
@@ -7,6 +7,7 @@
     margin-top: 20px;
     margin-bottom: 10px;
     text-align: center;
+
     border-radius: 10px;
     box-shadow: 1px 1px 5px 1px black;
     padding: 25px;
@@ -31,11 +32,12 @@
     text-decoration: none;
     font-weight: bold;
     position: absolute;
-    right: 10px;
+    right: 5px;
     top: 5px;
     padding: 10px;
     border-radius: 10px;
     color: green;
+    background-color: lightblue;
 }
 
 .quize-card a:hover {
