--- a/src/components/OptionCard/OptionCard.css
+++ b/src/components/OptionCard/OptionCard.css
@@ -1,35 +1,17 @@
-.tick-div {
-    border: 1px solid black;
-    border-radius: 50%;
-    padding: 0 25px;
-    background-color: brown;
-    color: white;
-    box-shadow: 1px 1px 5px 1px black;
-}
 .option-card {
     background-color: antiquewhite;
     border: 1px solid black;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     border-radius: 10px;
-    width: 310px;
-    height: 50px;
+    width: 220px;
+    height: 70px;
     box-shadow: 1px 1px 5px 1px black;
-    padding: 15px;
-    font-size: 15px;
-    text-overflow:unset;
-}
-.option-card li {
-    list-style-type: circle;
-}
-
-.option-card li:hover {
-    list-style-type: disc;
-   
+    padding: 5px 10px;
+    font-size: 20px;
 }
 
 .option-card:hover {
     background-color: rgba(0, 253, 0, 0.829);
-    font-weight: bold;
 }
