--- a/src/components/Quizes/Quizes.css
+++ b/src/components/Quizes/Quizes.css
@@ -24,7 +24,7 @@
     display: grid;
     justify-content: center;
     align-items: center;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto;
     gap: 50px;
     padding: 20px;
 }
