--- a/src/layouts/Footer/Footer.css
+++ b/src/layouts/Footer/Footer.css
@@ -3,9 +3,9 @@
     text-align: center;
     padding: 15px;
     box-shadow: 0px -10px 50px 20px  rgba(126, 186, 239, 0.514);
+    margin: 0;
 }
 
-.footer h1 {
+.footer h2 {
     margin: 0;
-    
 }
