--- a/src/components/Blogs/Blogs.css
+++ b/src/components/Blogs/Blogs.css
@@ -1,6 +1,7 @@
-/* .footer {
+.blogs-cards-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-content: center;
+    align-items: center;
 
-    position: relative;
-    bottom: 0;
-    padding: 0;
-} */
+}
