--- a/src/components/QuizeCard/QuizeCard.css
+++ b/src/components/QuizeCard/QuizeCard.css
@@ -46,3 +46,14 @@
     background-color: rgb(0, 255, 30);
     color: black;
 }
+
+.foo-bar {
+    width: 400px;
+    height: 400px;
+    text-align: center;
+    padding: 25px;
+    margin-right: 25px;
+    background: yellow;
+
+}
+
