stats sidebar added with sticky bihavior

--- a/src/components/Quizes/Quizes.css
+++ b/src/components/Quizes/Quizes.css
@@ -15,6 +15,7 @@
 .quize-and-stats-component-container {
     display: grid;
     grid-template-columns: auto auto;
+    justify-content: space-around;
 }
 
 /* Styling name of the topic */
