--- a/src/components/Stats/Stats.css
+++ b/src/components/Stats/Stats.css
@@ -1,11 +1,11 @@
 .stats {
-    background-color: rgb(219, 249, 182);
+    background-color: rgb(233, 233, 245);
     position: sticky;
     padding: 10px;
     width: 400px;
     height: 97vh;
     top: 0;
     text-align: center;
-    box-shadow: 1px 1px 1px 1px blanchedalmond;
+    box-shadow: 0px 0px 3px 0px black;
 
 }
