--- a/src/layouts/CalCart/CalCart.css
+++ b/src/layouts/CalCart/CalCart.css
@@ -3,6 +3,6 @@
 }
 .cal-cart h1 {
     margin: 0;
-    background-color: aliceblue;
+    background-color: rgb(207, 210, 212);
     padding: 15px;
 }
