--- a/src/components/Stats/Stats.css
+++ b/src/components/Stats/Stats.css
@@ -1,4 +1,5 @@
-.stats {
+/* Style for Stats container */
+#stats {
     background-color: rgb(233, 233, 245);
     position: sticky;
     padding: 10px;
@@ -7,5 +8,40 @@
     top: 0;
     text-align: center;
     box-shadow: 0px 0px 3px 0px black;
-
+    border-radius: 3px;
 }
+#stats h1 {
+    margin: 0;
+    margin-bottom: 25px;
+}
+
+
+/* styles for stat containers */
+#total-correct-answer-container {
+    background-color: antiquewhite;
+    padding: 5px;
+    margin-bottom: 25px;
+}
+#total-incorrect-answer-container {
+    background-color: whitesmoke;
+    padding: 5px;
+}
+.state-container {
+    margin: 0 auto;
+    width: 70%;
+    height: 35%;
+    border-radius: 10px;
+}
+.state-container h3 {
+    margin: 0;
+    margin-top: 10px;
+}
+
+
+/* Styles for total correct and incorrect answer number container */
+.number-container {
+    font-size: 50px;
+    font-weight: bold;
+}
+
+
