--- a/src/components/Stats/Stats.css
+++ b/src/components/Stats/Stats.css
@@ -1,6 +1,6 @@
 /* Style for Stats container */
 #stats {
-    background-color: rgb(233, 233, 245);
+    background-color: rgba(2, 136, 253, 0.744);
     position: sticky;
     padding: 10px;
     width: 400px;
@@ -18,12 +18,12 @@
 
 /* styles for stat containers */
 #total-correct-answer-container {
-    background-color: antiquewhite;
+    background-color: rgb(130, 237, 148);
     padding: 5px;
     margin-bottom: 25px;
 }
 #total-incorrect-answer-container {
-    background-color: whitesmoke;
+    background-color: rgb(245, 102, 102);
     padding: 5px;
 }
 .state-container {
