some changes has been done

--- a/src/components/Blogs/Blogs.css
+++ b/src/components/Blogs/Blogs.css
@@ -1,6 +1,6 @@
 .blogs-cards-container {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto;
     justify-content: center;
     align-items: center;
 
