--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,10 +1,8 @@
-
 .about h1 {
     text-align: center;
     margin: 0;
     margin-top: 25px;
 }
-
 
 .about-text-contaier {
     padding: 50px;
@@ -12,10 +10,10 @@
 
 .about-text {
     padding: 25px;
-    width: 700px;
-    height: 580px;
+    width: 550px;
+    height: 600px;
     margin: 0 auto;
-    font-size: 25px;
-    box-shadow: 0px 0px 10px 2px rgba(0, 0, 11, 0.358);
-
+    font-size: 22px;
+    box-shadow: 0px 0px 10px 2px rgba(10, 10, 222, 0.358);
+    border-radius: 10px;
 }
