--- a/src/layouts/Header/Header.css
+++ b/src/layouts/Header/Header.css
@@ -6,6 +6,7 @@
     font-weight: bold;
     padding: 0;
     box-shadow: 0px 10px 50px 20px  rgba(126, 186, 239, 0.514);
+    width: 100%;
 }
 
 .header a {
@@ -13,4 +14,11 @@
     color:  black;
     padding-right: 20px;
     font-size: 20px;
+}
+
+
+@media screen and (max-width: 575.98px) {
+    .header {
+        width: 100%;
+    }
 }
