--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,19 +1,18 @@
 .about h1 {
     text-align: center;
-    margin: 0;
-    margin-top: 25px;
+    margin-top: 10px;
 }
 
 .about-text-contaier {
-    padding: 50px;
+    margin-bottom: 50px;
 }
 
 .about-text {
     padding: 25px;
-    width: 550px;
-    height: 600px;
+    width: 50%;
+    height: auto;
     margin: 0 auto;
-    font-size: 22px;
+    font-size: larger;
     box-shadow: 0px 0px 10px 2px rgba(10, 10, 222, 0.358);
     border-radius: 10px;
 }
