--- a/src/components/Quizes/Quizes.css
+++ b/src/components/Quizes/Quizes.css
@@ -28,9 +28,13 @@
     text-align: center;
     padding: 20px;
     margin: 0 auto ;
-
-
 }
 
+
+@media only screen and (max-width: 576px) {
+    .quize-and-stats-component-container {
+
+    }
+}
 
 
