--- a/src/components/Topic/Topic.css
+++ b/src/components/Topic/Topic.css
@@ -1,12 +1,12 @@
 .topic {
-    width: 400px;
+    width: 100%;
     border: 1px solid black;
     box-shadow: 0px 0px 10px 1px black;
     border-radius: 10px;
 }
 .topic img {
-    width: 395px;
-    height: 350px;
+    width: 100%;
+    height: auto;
     border-bottom: 1px solid black;
     background-color: rgb(181, 197, 190);
     border-radius: 10px 10px 0 0;
@@ -15,12 +15,11 @@
 
 .topic-detail {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
-
 }
 .topic-detail p {
-    font-size: 20px;
+    font-size: smaller;
     font-weight: bold;
 }
 
@@ -29,11 +28,10 @@
     justify-content: space-around;
     align-items: center;
     align-items: center;
-    padding: 7px 20px;
-    font-weight: bold;
+    padding: 7px 10px;
     background-color: rgb(46, 9, 255);
     border-radius: 5px;
-    font-size: 20px;
+    font-size: smaller;
     text-decoration: none;
     color: white;
 }
