--- a/src/components/Topics/Topics.css
+++ b/src/components/Topics/Topics.css
@@ -5,16 +5,35 @@
 
 .topics-cont {
     padding: 50px;
-    background-color: rgba(251, 251, 150, 0.278);
-    display: grid;
-    grid-template-columns: auto auto;
+    display: flex;
     gap: 100px;
     justify-content: center;
     align-items: center;
 }
 
 .topics h2 {
-    background-color: rgba(250, 235, 215, 0.332);
     margin: 0;
     padding: 10px;
+    font-size: larger;
+}
+
+/* Query for x-small screen */
+@media only screen and (max-width: 576px) {
+    .topics-cont {
+        display: grid;
+        grid-template-columns: auto;
+        gap: 50px;
+        padding: 100px;
+    }
+}
+
+
+/* Query for small screen */
+@media only screen and (max-width: 768px) {
+    .topics-cont {
+        display: grid;
+        grid-template-columns: auto;
+        gap: 50px;
+        padding: 100px;
+    }
 }
