--- a/src/layouts/Footer/Footer.css
+++ b/src/layouts/Footer/Footer.css
@@ -4,8 +4,13 @@
     box-shadow: 0px -10px 50px 20px  rgba(126, 186, 239, 0.514);
     margin: 0;
     padding: 10px;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    
 }
 
 .footer h3 {
     margin: 0;
+    font-size: larger;
 }
