--- a/src/layouts/Header/Header.css
+++ b/src/layouts/Header/Header.css
@@ -7,6 +7,7 @@
     padding: 0;
     box-shadow: 0px 10px 50px 20px  rgba(126, 186, 239, 0.514);
     width: 100%;
+    position: sticky;
 }
 
 .header a {
@@ -20,5 +21,24 @@
 @media screen and (max-width: 575.98px) {
     .header {
         width: 100%;
+        justify-content: space-around;
+    }
+    .header a {
+        display: flex;
+        flex-direction: column;
+        
+    }
+}
+
+
+@media only screen and (max-width: 768px) {
+    .header {
+        width: 100%;
+        justify-content: space-around;
+    }
+    .header a {
+        display: flex;
+        flex-direction: column;
+        
     }
 }
