--- a/src/layouts/SubHeader/SubHeader.css
+++ b/src/layouts/SubHeader/SubHeader.css
@@ -1,5 +1,4 @@
 .sub-header {
-    /* background-image: url('../../Images/quiz\ bg.avif'); */
     background-color: rgba(19, 254, 136, 0.448);
     padding: 30px;
     color: black;
@@ -8,5 +7,6 @@
     margin: 0;
     padding: 5px;
     text-align: center;
-    font-size: 40px;
+    font-size: larger;
+    background-color: none;
 }
