--- a/src/components/OptionCard/OptionCard.css
+++ b/src/components/OptionCard/OptionCard.css
@@ -5,13 +5,17 @@
     justify-content: space-around;
     align-items: center;
     border-radius: 10px;
-    width: 220px;
-    height: 70px;
+    width: 100%;
+    height: auto;
     box-shadow: 1px 1px 5px 1px black;
     padding: 5px 10px;
-    font-size: 20px;
+    font-size: larger;
 }
 
+
+.option-card h6 {
+    width: 100%;
+}
 .option-card:hover {
     background-color: rgba(0, 253, 0, 0.829);
 }
