--- a/src/components/QuizeCard/QuizeCard.css
+++ b/src/components/QuizeCard/QuizeCard.css
@@ -1,8 +1,8 @@
 /* Styling quiz-card */
 .quize-card {
     background-color: rgba(247, 248, 249, 0.275);
-    width: 600px;
-    height: 300px;
+    width: 60%;
+    height: auto;
     border: 1px solid black;
     margin-top: 20px;
     margin-bottom: 10px;
@@ -24,7 +24,7 @@
     grid-template-columns: auto auto;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 10%;
   
    
 }
