--- a/src/layouts/Header/Header.css
+++ b/src/layouts/Header/Header.css
@@ -24,7 +24,7 @@
         justify-content: space-around;
     }
     .header a {
-        display: flex;
+        display: none;
         flex-direction: column;
         
     }
@@ -37,7 +37,7 @@
         justify-content: space-around;
     }
     .header a {
-        display: flex;
+        display: none;
         flex-direction: column;
         
     }
