some changes have been done

--- a/src/components/OptionCard/OptionCard.css
+++ b/src/components/OptionCard/OptionCard.css
@@ -1,5 +1,5 @@
 .option-card {
-    background-color: antiquewhite;
+    background-color: greenyellow;
     border: 1px solid black;
     display: flex;
     justify-content: space-around;
