--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,7 +1,8 @@
 .logo{
-    margin-left: 25px;
     color: white;
     text-shadow: 1px 1px 5px black;
+    display: flex;
+    align-items: center;
     
 }
 
@@ -11,6 +12,6 @@
 .logo p {
     text-shadow: none;
     color: black;
-    font-weight: normal;
-    line-height: 0;
+    margin-left: 15px;
+    margin-top: 24px;
 }
