--- a/src/layouts/Header/Header.css
+++ b/src/layouts/Header/Header.css
@@ -1,24 +1,17 @@
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     background-color: rgba(2, 136, 253, 0.744);
     align-items: center;
-    font-weight: bold;
-    padding: 0;
     box-shadow: 0px 10px 50px 20px  rgba(126, 186, 239, 0.514);
     width: 100%;
-    position: sticky;
 }
 
-.header a {
-    text-decoration: none;
-    color:  black;
-    padding-right: 20px;
-    font-size: 20px;
+.menuBar {
+    width: 03%;
 }
 
-
-@media screen and (max-width: 575.98px) {
+/* @media screen and (max-width: 575.98px) {
     .header {
         width: 100%;
         justify-content: space-around;
@@ -41,4 +34,4 @@
         flex-direction: column;
         
     }
-}
+} */
