--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -3,15 +3,20 @@
     text-shadow: 1px 1px 5px black;
     display: flex;
     align-items: center;
+    padding: 0;
     
 }
 
 .logo h1 {
     margin: 0;
+    font-size: 10vw;
 }
 .logo p {
     text-shadow: none;
     color: black;
-    margin-left: 15px;
-    margin-top: 24px;
+    margin-left: 5px;
+    margin-top: 20px;
+    margin-right: 20px;
+    font-size: smaller;
+    font-size: 5vw;
 }
