--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,39 +1,49 @@
-.navitems a {
+.navitem a {
     text-decoration: none;
     color:  black;
     font-weight: bolder;
     font-size: smaller;
     padding: 5px 15px;
-    border-radius: 10px;
-  }
-  
-  .navitems a:hover {
-    background-color: whitesmoke;
   }
 
-  .show {
-    background-color: yellow;
-  }
 
-  .hide {
-    background-color: red;
-  }
-
+/* Media query for medium mobile devices */
 @media screen and (max-width: 576px) { 
    .show  {
    display: flex;
    flex-direction: column;
-   position: absolute;
-   background-color: aquamarine;
-   top: -200px;
-   width: 100%;
+   position: fixed;
+   background-color: rgb(2, 136, 253);
+   top: 0;
+   right: -1000px;
+   width: 50%;
+   height: 100%;
    text-align: center;
+   transition: ease-out;
+   transition-duration: 0.5s;
+   padding-top: 12%;
   }
 
   .hide {
-    background-color: blue;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    right: 0;
+    text-align: center;
+    background-color: rgb(2, 136, 253);
+    transition: ease-in-out;
+    transition-duration: 01s;
+    z-index: 2;
+    padding-top: 12%;
   }
-  .navitems a:hover {
-    background-color: aliceblue;
+
+  .navitem a:nth-child(odd) {
+    background-color: rgba(255, 255, 255, 0.211);
+  }
+  .navitem a:hover {
+    background-color: greenyellow;
   }
 }
