--- a/src/components/Topics/Topics.css
+++ b/src/components/Topics/Topics.css
@@ -4,9 +4,10 @@
 }
 
 .topics-cont {
-    padding: 50px;
-    display: flex;
-    gap: 100px;
+    padding: 5%;
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 5%;
     justify-content: center;
     align-items: center;
 }
@@ -21,7 +22,7 @@
 @media only screen and (max-width: 576px) {
     .topics-cont {
         display: grid;
-        grid-template-columns: auto;
+        grid-template-columns: auto auto;
         gap: 50px;
         padding: 100px;
     }
