--- a/src/layouts/Header/Header.css
+++ b/src/layouts/Header/Header.css
@@ -1,14 +1,20 @@
 .header {
+    width: 100%;
     display: flex;
     justify-content: space-around;
-    background-color: rgba(2, 136, 253, 0.744);
     align-items: center;
+    background-color: rgba(2, 136, 253, 0.744);
     box-shadow: 0px 10px 50px 20px  rgba(126, 186, 239, 0.514);
-    width: 100%;
 }
 
 .menuBar {
-    width: 03%;
+    width: 04%;
+    z-index: 3;
+    position: fixed;
+    top: 15px;
+    right: 15px;
+    
+
 }
 
 /* @media screen and (max-width: 575.98px) {
