--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -3,20 +3,74 @@
     text-shadow: 1px 1px 5px black;
     display: flex;
     align-items: center;
-    padding: 0;
     
 }
 
 .logo h1 {
     margin: 0;
-    font-size: 10vw;
+    font-size: 8vw;
 }
 .logo p {
     text-shadow: none;
     color: black;
-    margin-left: 5px;
-    margin-top: 20px;
+    margin-left: 10px;
+    margin-top: 15px;
     margin-right: 20px;
-    font-size: smaller;
-    font-size: 5vw;
+    margin-bottom: 10px;
+    font-size: 4vw;
+}
+
+
+/* Midea queries */
+/* Midea query for small devices */
+
+/* Midea query for medium devices */
+@media only screen and ( max-width: 768px) {
+    .logo {
+        margin-bottom: 10px;
+    }
+    .logo h1 {
+        font-size: 5vw;
+    }
+    .logo p {
+        padding: 0;
+        font-size: 4vw
+
+    };
+
+ }
+
+/* Midea query for large devices */ 
+@media only screen and ( min-width: 769px) { 
+    .logo h1 {
+      font-size: 3vw;
+      margin: 0;
+      padding: 0;
+    }
+    .logo p {
+        font-size: 2vw;
+    }
+}
+
+/* Midea query for extra large devices */
+@media only screen and ( min-width: 1200px) {
+    .logo h1 {
+        font-size: 2vw;
+      }
+    .logo p {
+        font-size: 1vw;
+    }
+ }
+
+/* Midea query for extra extra large devices */
+@media only screen and ( min-width: 1400px) { 
+    .logo h1 {
+        font-size: 2vw;
+        line-height: 0;
+    }
+    .logo p {
+        font-size: 1vw;
+        line-height: 0;
+        
+    }
 }
