--- a/src/layouts/Footer/Footer.css
+++ b/src/layouts/Footer/Footer.css
@@ -4,6 +4,8 @@
     box-shadow: 0px -10px 50px 20px  rgba(126, 186, 239, 0.514);
     padding: 10px;
     width: 100%;
+    position: relative;
+    bottom: 0       ;
     
 }
 
@@ -11,3 +13,16 @@
     margin: 0;
     font-size: smaller;
 }
+
+
+/* Midea query for large devices */ 
+@media only screen and ( min-width: 769px) {  
+    .footer {
+        margin-top: 2%;
+    }
+    .footer h3 {
+        font-size: larger;
+    }
+}
+
+
