--- a/src/layouts/SubHeader/SubHeader.css
+++ b/src/layouts/SubHeader/SubHeader.css
@@ -3,11 +3,14 @@
     color: black;
     font-size: larger;
     width: 100%;
+    height: auto;
+    padding: 1%;
 }
 
 .sub-header h3 {
-    margin: 0;
+    margin: 0 auto;
     font-weight: normal;
     overflow: hidden;
-    padding: 25px;
+    padding: 1.5%;
+    width: 60%;
 }
