--- a/src/components/Statics/Statics.css
+++ b/src/components/Statics/Statics.css
@@ -1,4 +1,12 @@
+    .statics {
+    width: 100%;
+    text-align: center;
+}
 .statics h1{
- text-align: center;
- margin-top: 50px;
+    font-size: 2vw;
+}
+ 
+.chart-container {
+    margin-bottom: 100px;
+    margin-top: 100px;
 }
