--- a/src/components/DetailedBlog/DetailedBlog.css
+++ b/src/components/DetailedBlog/DetailedBlog.css
@@ -1,17 +1,31 @@
 #blog-containers-container {
-    padding: 50px;
+  margin: 4%;
+ 
 }
 
 #blog-container {
     background-color: rgb(212, 243, 212);
     padding: 50px;
-    height: 700px;
+    height: 600px;  
     width: 40%;
     margin: 0 auto;
-    font-size: 18px;
+    font-size: larger;
     border-radius: 10px;
+    overflow: scroll;
 }
 
 #blog-container h3, h5 {
     margin: 0;
 }
+
+
+
+@media only screen and (max-width: 992px) {
+    #blog-container {
+        width: 70%; 
+        margin-top: 10%;
+        margin-bottom: 30%;
+        overflow-wrap: break-word;
+    }
+}
+
