--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,18 +1,32 @@
-.about h1 {
-    text-align: center;
-    margin-top: 10px;
+.about {
+    margin: 0 auto;
 }
 
 .about-text-contaier {
-    margin-bottom: 50px;
+ padding: 1%;
+}
+
+.about h1 {
+    text-align: center;
 }
 
 .about-text {
-    padding: 25px;
-    width: 50%;
-    height: auto;
+    padding: 2%;
+    width: 40%;
+    height: 650px;
     margin: 0 auto;
     font-size: larger;
     box-shadow: 0px 0px 10px 2px rgba(10, 10, 222, 0.358);
     border-radius: 10px;
+    overflow: scroll;
+    margin-bottom: 10%;
+}
+
+
+
+/* Midea query for medium devices */
+@media only screen and ( max-width: 768px) { 
+    .about-text {
+        width: 70%;
+    }
 }
