--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,42 +1,69 @@
-.contact-page {
-    margin: 0;
-}
-.contact-page  h1{
+.contact h1 {
     text-align: center;
-    font-size: larger;
 }
 
 .form-container {
-    margin-bottom: 25px;
+    margin-bottom: 10%;
+    margin-top: 2%;
 }
-
 
 .form-container form {
     background-color: rgb(0, 119, 255);
-    width: 25%;
-    height: auto;
-    text-align: center;
+    width: 30%;
     margin: 0 auto;
     border-radius: 10px;
-    padding: 25px;
+    padding: 50px 50px;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 11, 0.358);
+    height: 550px;
+    text-align: center;
+    
 }
 
 .form-container form label {
-    font-weight: bold;
-    font-size: 20px;
+    font-size: larger;
+    margin-right: 195px;  
+    margin-top: 100px;
 }
 
 .form-container form input {
     border-radius: 10px;
     padding: 10px;
-    margin-left: 25px;
-    margin-top: 25px;
+    width: 80%;
+    text-align: center;
+    border: none;
+    margin-bottom: 10px;
+
 }
 
 .form-container form textarea {
-   margin-top: 50px;
-   width: 250px;
-   height: 100px;
+   margin-top: 5%;
+   width: 80%;
+   height: 80px;    
    display: inline;
+   border-radius: 10px;
+   text-align: center;
+}
+#submit, #reset {
+    width: 100%;
+    padding: 5px 30px;
+    border: none;
+
+}
+#submit:hover, #reset:hover {
+    background-color: rgb(168, 249, 5);
+
+}
+
+
+.form-buttons {
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: center;
+    align-items: center;
+    column-gap: 50px;
+    text-align: center;
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 15px;
+    
 }
