--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -8,96 +8,153 @@
 }
 
 .form-container form {
-    background-color: rgb(0, 119, 255);
-    width: 30%;
+    width: 25%;
     margin: 0 auto;
+    background-color: rgb(0, 119, 255);
     border-radius: 10px;
     padding: 50px 50px;
-    box-shadow: 0px 0px 10px 2px rgba(0, 0, 11, 0.358);
     height: 550px;
     text-align: center;
-    
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 11, 0.358);   
 }
 
 .form-container form label {
-    font-size: larger;
-    margin-right: 195px;  
-    margin-top: 100px;
+    font-size: smaller;
+    display: block;
+    font-weight: bold;
+    text-align: left;
+    margin-left: 10%;
 }
 
 .form-container form input {
     border-radius: 10px;
     padding: 10px;
-    width: 80%;
+    width: 70%;
+    font-size: smaller;
     text-align: center;
     border: none;
-    margin-bottom: 10px;
-
+    margin-bottom: 5%;
 }
 
 .form-container form textarea {
-   margin-top: 5%;
-   width: 80%;
+   margin-top: 2%;
+   width: 70%;
    height: 80px;    
    display: inline;
    border-radius: 10px;
    text-align: center;
 }
-#submit, #reset {
-    padding: .5% 2%;
-    border: none;
-    font-size: smaller;
-    font-weight: bolder;
-
-}
-#submit:hover, #reset:hover {
-    background-color: rgb(168, 249, 5);
-
-}
 
 .form-buttons {
-    display: grid;
-    grid-template-columns: auto auto;
+    width: 100%;
+    height: auto;
+    display: flex;
     justify-content: center;
     align-items: center;
-    column-gap: 3%;
-    width: 80%;
-    margin: 0 auto;
     margin-top: 15px;
-    
 }
 
 
 @media only screen and ( max-width: 576px) {
     .form-container form {
-        width: 80%;
+        width: 60%;
         height: 600px;
         margin-bottom: 25%;
         margin-top: 30px;
+        height: 550px;
     }
+
     .form-container form input {
         width: 60%;
+
     }
+    
     .form-container form label {
         font-size: smaller;
         font-weight: bold;
-        width: 70%;
-    
-
-
+        width: 60%;
     }
+
     .form-container form textarea {
         width: 60%;
     }
  
-    .form-buttons {
-        width: 60%;
-        background-color: yellow;
-    }
-
-    #submit, #reset {
-    
-    }
-
   
+}
+
+@media only screen and ( min-width: 577px) {
+    .form-container form {
+        width: 50%;
+        margin-bottom: 25%;
+        margin-top: 30px;
+        height: 550px;
+    }
+
+    .form-container form input {
+        width: 60%;
+        font-size: smaller;
+    }
+
+    .form-container form label {
+        font-size: smaller;
+        font-weight: bold;
+        width: 60%;
+    }
+
+    .form-container form textarea {
+        width: 60%;
+    }
+}
+
+@media only screen and ( min-width: 769px) {
+    .form-container form {
+        width: 45%;
+        height: 650px;
+        margin-bottom: 20%;
+        margin-top: 50px;
+    }
+
+    .form-container form input {
+        width: 50%;
+        font-size: smaller; 
+    }
+
+    .form-container form label {
+        font-size: smaller;
+        font-weight: bold;
+        width: 50%;
+        margin-left: 25%;
+        margin-bottom: 10px;
+    }
+
+    .form-container form textarea {
+        width: 50%;
+    }
+}
+
+@media only screen and ( min-width: 993px) {
+    .form-container form {
+        width: 35%;
+        height: 650px;
+        margin-bottom: 20%;
+        margin-top: 50px;
+       
+    }
+
+    .form-container form input {
+        width: 70%;
+        font-size: smaller;
+        
+    }
+
+    .form-container form label {
+        font-size: smaller;
+        font-weight: bold;
+        margin-left: 20%;
+        margin-bottom: 10px;
+    }
+
+    .form-container form textarea {
+        width: 70%;
+    }
 }
