some change have been done

--- a/src/components/QuizeCard/QuizeCard.css
+++ b/src/components/QuizeCard/QuizeCard.css
@@ -1,11 +1,8 @@
 /* Styling quiz-card */
 .quize-card {
-    background-color: rgba(247, 248, 249, 0.275);
-    width: 60%;
-    height: auto;
-    border: 1px solid black;
-    margin-top: 20px;
-    margin-bottom: 10px;
+    background-color: white;
+    width: 30vw;
+    height: 30vh;
     text-align: center;
     border-radius: 10px;
     box-shadow: 1px 1px 5px 1px black;
@@ -14,17 +11,14 @@
 }
 .quize-card h3 {
     text-align: center;
-    padding-right: 40px;
-    padding-left: 20px;
+    font-size: smaller;
+ 
 }
 
 /* Managing quize's option's container */
 .options-container {
-    display: grid;
-    grid-template-columns: auto auto;
-    justify-content: center;
+    background-color: red;
     align-items: center;
-    gap: 10%;
   
    
 }
@@ -40,6 +34,7 @@
     border-radius: 10px;
     color: green;
     background-color: lightblue;
+    font-size: smaller;
 }
 
 .quize-card a:hover {
@@ -47,9 +42,4 @@
     color: black;
 }
 
-.foo-bar {
-    text-align: center;
-    margin-right: 50px;
-
-}
 
