--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 html, body {
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 
 }
 
 * {
     box-sizing: border-box;
+    transition: ease-in-out;
+    transition-duration: 1s;
 }
