--- a/src/components/OptionCard/OptionCard.css
+++ b/src/components/OptionCard/OptionCard.css
@@ -1,15 +1,14 @@
 .option-card {
-    background-color: antiquewhite;
-    border: 1px solid black;
+    background-color: blue;
     display: flex;
-    justify-content: space-around;
     align-items: center;
+    justify-content: center;
     border-radius: 10px;
-    width: 100%;
-    height: auto;
+    width: 5vw;
+    height: 5vh;
     box-shadow: 1px 1px 5px 1px black;
-    padding: 5px 10px;
-    font-size: larger;
+    font-size: smaller;
+    
 }
 
 
