--- a/src/components/Stats/Stats.css
+++ b/src/components/Stats/Stats.css
@@ -1,18 +1,18 @@
 /* Style for Stats container */
 #stats {
-    background-color: rgba(2, 136, 253, 0.744);
+    background-color: rgb(2, 136, 253);
     position: sticky;
-    padding: 10px;
-    width: 400px;
-    height: 97vh;
     top: 0;
+    width: 300px;
+    height: 100vh;
     text-align: center;
-    box-shadow: 0px 0px 3px 0px black;
-    border-radius: 3px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 #stats h1 {
     margin: 0;
     margin-bottom: 25px;
+    font-size: larger;
 }
 
 
@@ -29,12 +29,13 @@
 .state-container {
     margin: 0 auto;
     width: 70%;
-    height: 35%;
+    height: auto;
     border-radius: 10px;
 }
 .state-container h3 {
     margin: 0;
     margin-top: 10px;
+    font-size: larger;
 }
 
 
