--- a/src/layouts/Header/Header.css
+++ b/src/layouts/Header/Header.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: rgba(2, 136, 253, 0.744);
+    background-color: rgb(2, 136, 253);
     box-shadow: 0px 10px 50px 20px  rgba(126, 186, 239, 0.514);
     padding: 1%;
 }
