--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,6 +1,6 @@
 /* Style for blog container and blog-containers-container */
 #blog {
-    background-color: rgb(246, 248, 250);
+    background-color: rgba(251, 251, 3, 0.727);
     border-radius: 10px;
     padding: 10px;
     width: 355px;
@@ -8,15 +8,13 @@
     text-align: left;
     margin: 25px;
     box-shadow: 0px 0px 5px 1px rgb(0, 0, 19);
-  
-
+    position: relative;
 }
 
 #blog img {
     width: 100%;
     height: 60%;    
     border-radius: 10px; 
-  
 }
 
 #blog-img-caption {
@@ -65,6 +63,8 @@
     width: 95%;
     text-align: center;
     font-weight: bold;
+    position: absolute;
+    bottom: 10px;
 }
 
 #blog a:hover {
